--- a/sp500test.ipynb
+++ b/sp500test.ipynb
@@ -6,7 +6,11 @@
    "id": "b58ddc7f-5d59-404f-b520-45e3a25347b5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 本地（需要 Python 3.10+，scikit-learn, pandas, numpy）\n",
+    "python synthetic_demo.py   # 先用合成数据跑通流程\n",
+    "python run_baseline.py     # 替换成真实列名后跑CV与诊断\n"
+   ]
   }
  ],
  "metadata": {
