--- a/ak-tool.ipynb
+++ b/ak-tool.ipynb
@@ -199,8 +199,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "f00e3f8d-d608-45ce-93db-617a1f8827c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "Eastmoney 接口不可用（fs=m:0 t:80）",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 61\u001b[0m\n\u001b[1;32m     58\u001b[0m \u001b[38;5;66;03m# ---- 执行并打印 ----\u001b[39;00m\n\u001b[1;32m     59\u001b[0m sess \u001b[38;5;241m=\u001b[39m make_session()\n\u001b[0;32m---> 61\u001b[0m kechuang \u001b[38;5;241m=\u001b[39m \u001b[43mquery_total\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mm:0 t:80\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msess\u001b[49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# 科创板\u001b[39;00m\n\u001b[1;32m     62\u001b[0m chuangye \u001b[38;5;241m=\u001b[39m query_total(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mm:1 t:23\u001b[39m\u001b[38;5;124m\"\u001b[39m, sess)  \u001b[38;5;66;03m# 创业板\u001b[39;00m\n\u001b[1;32m     63\u001b[0m sh_main  \u001b[38;5;241m=\u001b[39m query_total(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mm:0 t:6\u001b[39m\u001b[38;5;124m\"\u001b[39m,  sess)  \u001b[38;5;66;03m# 上证A -> 主板(上海)\u001b[39;00m\n",
+      "Cell \u001b[0;32mIn[5], line 56\u001b[0m, in \u001b[0;36mquery_total\u001b[0;34m(fs, session, timeout)\u001b[0m\n\u001b[1;32m     54\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m:\n\u001b[1;32m     55\u001b[0m         \u001b[38;5;28;01mcontinue\u001b[39;00m\n\u001b[0;32m---> 56\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEastmoney 接口不可用（fs=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfs\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m）\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: Eastmoney 接口不可用（fs=m:0 t:80）"
+     ]
+    }
+   ],
+   "source": [
+    "# 统计“科创板 / 创业板 / 主板”的数量（只取 total，避免大数据量超时）\n",
+    "import requests, random\n",
+    "from urllib3.util.retry import Retry\n",
+    "from requests.adapters import HTTPAdapter\n",
+    "\n",
+    "HOSTS = [\n",
+    "    \"https://push2.eastmoney.com/api/qt/clist/get\",\n",
+    "    \"https://82.push2.eastmoney.com/api/qt/clist/get\",\n",
+    "    \"https://32.push2.eastmoney.com/api/qt/clist/get\",\n",
+    "]\n",
+    "\n",
+    "def make_session():\n",
+    "    s = requests.Session()\n",
+    "    # 更稳的重试策略\n",
+    "    retry = Retry(\n",
+    "        total=6, connect=6, read=6, backoff_factor=0.7,\n",
+    "        status_forcelist=[429, 500, 502, 503, 504],\n",
+    "        allowed_methods=[\"GET\"],\n",
+    "        raise_on_status=False\n",
+    "    )\n",
+    "    s.mount(\"https://\", HTTPAdapter(max_retries=retry))\n",
+    "    s.headers.update({\n",
+    "        \"User-Agent\": \"Mozilla/5.0\",\n",
+    "        \"Referer\": \"https://quote.eastmoney.com/\",\n",
+    "        \"Accept\": \"application/json, text/plain, */*\",\n",
+    "    })\n",
+    "    return s\n",
+    "\n",
+    "def query_total(fs: str, session: requests.Session, timeout=15) -> int:\n",
+    "    \"\"\"\n",
+    "    只请求 1 条数据，用返回里的 data.total 读取总数\n",
+    "    fs 示例：\n",
+    "      - 科创板: m:0 t:80\n",
+    "      - 创业板: m:1 t:23\n",
+    "      - 上证A : m:0 t:6       （主板-上海）\n",
+    "      - 深证A : m:1 t:2       （主板-深圳）\n",
+    "    \"\"\"\n",
+    "    params = {\n",
+    "        \"pn\": \"1\", \"pz\": \"1\", \"po\": \"1\", \"np\": \"1\",\n",
+    "        \"ut\": \"bd1d9ddb04089700cf9c27f6f7426281\",\n",
+    "        \"fltt\": \"2\", \"invt\": \"2\", \"fid\": \"f12\",\n",
+    "        \"fs\": fs,\n",
+    "        \"fields\": \"f12\"\n",
+    "    }\n",
+    "    # 每次随机主机，增加命中率\n",
+    "    for base in random.sample(HOSTS, k=len(HOSTS)):\n",
+    "        try:\n",
+    "            r = session.get(base, params=params, timeout=timeout)\n",
+    "            r.raise_for_status()\n",
+    "            j = r.json()\n",
+    "            total = (j or {}).get(\"data\", {}).get(\"total\")\n",
+    "            if isinstance(total, int):\n",
+    "                return total\n",
+    "        except Exception:\n",
+    "            continue\n",
+    "    raise RuntimeError(f\"Eastmoney 接口不可用（fs={fs}）\")\n",
+    "\n",
+    "# ---- 执行并打印 ----\n",
+    "sess = make_session()\n",
+    "\n",
+    "kechuang = query_total(\"m:0 t:80\", sess)  # 科创板\n",
+    "chuangye = query_total(\"m:1 t:23\", sess)  # 创业板\n",
+    "sh_main  = query_total(\"m:0 t:6\",  sess)  # 上证A -> 主板(上海)\n",
+    "sz_main  = query_total(\"m:1 t:2\",  sess)  # 深证A -> 主板(深圳)\n",
+    "zhuban   = sh_main + sz_main\n",
+    "\n",
+    "heji = kechuang + chuangye + zhuban\n",
+    "print(f\"科创板：{kechuang}\")\n",
+    "print(f\"创业板：{chuangye}\")\n",
+    "print(f\"主  板：{zhuban}  （上证A={sh_main}，深证A={sz_main}）\")\n",
+    "print(f\"合  计：{heji}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af39669f-cf1b-4cda-be03-9230e05a615e",
    "metadata": {},
    "outputs": [],
    "source": []
