--- a/The-Big-APP-analyses/Data_exploring.ipynb
+++ b/The-Big-APP-analyses/Data_exploring.ipynb
@@ -2778,24 +2778,223 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "f407ff0a-85e4-4c16-b485-666a2753e454",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(Empty DataFrame\n",
+       " Columns: [INSTNM, STABBR, SAT_AVG_ALL, UGDS_ASIAN, AAP]\n",
+       " Index: [],\n",
+       " Empty DataFrame\n",
+       " Columns: [INSTNM, STABBR, SAT_AVG_ALL, UGDS_ASIAN, AAP]\n",
+       " Index: [])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#如果某校亚裔比例是全美平均的 3 倍 → 竞争环境明显更“硬”\n",
+    "\n",
+    "pd.set_option('display.max_rows', None)\n",
+    "df = pd.read_csv(CSV_PATH, dtype=str, low_memory=False)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# 数值转换\n",
+    "df[\"SAT_AVG_ALL\"] = pd.to_numeric(df[\"SAT_AVG_ALL\"], errors=\"coerce\")\n",
+    "df[\"UGDS_ASIAN\"] = pd.to_numeric(df[\"UGDS_ASIAN\"], errors=\"coerce\")\n",
+    "\n",
+    "# 去除缺数据学校\n",
+    "df = df.dropna(subset=[\"SAT_AVG_ALL\", \"UGDS_ASIAN\"])\n",
+    "\n",
+    "# Step 1: 计算 SAT 标准化（学术门槛）\n",
+    "df[\"AGI\"] = (df[\"SAT_AVG_ALL\"] - df[\"SAT_AVG_ALL\"].mean()) / df[\"SAT_AVG_ALL\"].std()\n",
+    "\n",
+    "# Step 2: 计算亚裔竞争密度\n",
+    "national_avg_asian = df[\"UGDS_ASIAN\"].mean()\n",
+    "df[\"ACI\"] = df[\"UGDS_ASIAN\"] / national_avg_asian\n",
+    "\n",
+    "# Step 3: Asian Admission Pressure 指标\n",
+    "df[\"AAP\"] = df[\"AGI\"] * df[\"ACI\"]\n",
+    "\n",
+    "# 排序：亚裔门槛最高的学校\n",
+    "hard_for_asian = df.sort_values(\"AAP\", ascending=False).head(30)[[\"INSTNM\", \"STABBR\", \"SAT_AVG_ALL\", \"UGDS_ASIAN\", \"AAP\"]]\n",
+    "\n",
+    "# 排序：最友好（门槛较低）\n",
+    "friendly_for_asian = df.sort_values(\"AAP\", ascending=True).head(30)[[\"INSTNM\", \"STABBR\", \"SAT_AVG_ALL\", \"UGDS_ASIAN\", \"AAP\"]]\n",
+    "\n",
+    "hard_for_asian, friendly_for_asian\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "3695e977-3257-457c-84a7-a43f82611d34",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ 亚裔申请压力最高的学校（越靠前越卷）\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>INSTNM</th>\n",
+       "      <th>STABBR</th>\n",
+       "      <th>SAT_AVG_ALL</th>\n",
+       "      <th>UGDS_ASIAN</th>\n",
+       "      <th>AGI</th>\n",
+       "      <th>ACI</th>\n",
+       "      <th>AAP</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [INSTNM, STABBR, SAT_AVG_ALL, UGDS_ASIAN, AGI, ACI, AAP]\n",
+       "Index: []"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ 对亚裔最友好（门槛不额外抬高 / 竞争不压缩）\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>INSTNM</th>\n",
+       "      <th>STABBR</th>\n",
+       "      <th>SAT_AVG_ALL</th>\n",
+       "      <th>UGDS_ASIAN</th>\n",
+       "      <th>AGI</th>\n",
+       "      <th>ACI</th>\n",
+       "      <th>AAP</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [INSTNM, STABBR, SAT_AVG_ALL, UGDS_ASIAN, AGI, ACI, AAP]\n",
+       "Index: []"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# ===== 你的CSV绝对路径 =====\n",
+    "CSV_PATH = \"/Users/zouxd/Documents/GitHub/MyTools/The-Big-APP-analyses/MERGED2007_08_PP.csv\"\n",
+    "\n",
+    "# ----- 读取并定位列 -----\n",
+    "df_all = pd.read_csv(CSV_PATH, dtype=str, low_memory=False)\n",
+    "df = df_all.copy()\n",
+    "\n",
+    "# 确保字段存在并转数值\n",
+    "for col in [\"SAT_AVG_ALL\", \"UGDS_ASIAN\"]:\n",
+    "    df[col] = pd.to_numeric(df[col], errors=\"coerce\")\n",
+    "\n",
+    "# 去掉没有 SAT 或 亚裔比例 的学校\n",
+    "df = df.dropna(subset=[\"SAT_AVG_ALL\", \"UGDS_ASIAN\"])\n",
+    "\n",
+    "# Step 1: 学术门槛 AGI = SAT 标准化\n",
+    "df[\"AGI\"] = (df[\"SAT_AVG_ALL\"] - df[\"SAT_AVG_ALL\"].mean()) / df[\"SAT_AVG_ALL\"].std()\n",
+    "\n",
+    "# Step 2: 亚裔集中度 ACI = 亚裔比例 / 全国平均亚裔比例\n",
+    "national_avg_asian = df[\"UGDS_ASIAN\"].mean()\n",
+    "df[\"ACI\"] = df[\"UGDS_ASIAN\"] / national_avg_asian\n",
+    "\n",
+    "# Step 3: 亚裔申请压力指数\n",
+    "df[\"AAP\"] = df[\"AGI\"] * df[\"ACI\"]\n",
+    "\n",
+    "# Top 30 亚裔申请压力最高的学校（越高越卷）\n",
+    "hard_for_asian = df.sort_values(\"AAP\", ascending=False).head(30)[\n",
+    "    [\"INSTNM\", \"STABBR\", \"SAT_AVG_ALL\", \"UGDS_ASIAN\", \"AGI\", \"ACI\", \"AAP\"]\n",
+    "]\n",
+    "\n",
+    "# Top 30 对亚裔最友好（压力最低）\n",
+    "friendly_for_asian = df.sort_values(\"AAP\", ascending=True).head(30)[\n",
+    "    [\"INSTNM\", \"STABBR\", \"SAT_AVG_ALL\", \"UGDS_ASIAN\", \"AGI\", \"ACI\", \"AAP\"]\n",
+    "]\n",
+    "\n",
+    "print(\"✅ 亚裔申请压力最高的学校（越靠前越卷）\")\n",
+    "display(hard_for_asian)\n",
+    "\n",
+    "print(\"✅ 对亚裔最友好（门槛不额外抬高 / 竞争不压缩）\")\n",
+    "display(friendly_for_asian)\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "d567fb9f-e930-4414-8146-6abcd8f5e2e9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7efe82ac-fe4c-4b53-8816-06324fb9b0a2",
    "metadata": {},
    "outputs": [],
    "source": []
