--- a/ImageProcessingTests.ipynb
+++ b/ImageProcessingTests.ipynb
@@ -2,24 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "c049397c-f100-4356-a032-2e52140c55f8",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'path/to/your/image.jpg'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 43\u001b[0m\n\u001b[1;32m     39\u001b[0m output_path \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpath/to/output/image.jpg\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m     41\u001b[0m x1, y1, x2, y2 \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m100\u001b[39m, \u001b[38;5;241m100\u001b[39m, \u001b[38;5;241m200\u001b[39m, \u001b[38;5;241m200\u001b[39m\n\u001b[0;32m---> 43\u001b[0m img \u001b[38;5;241m=\u001b[39m \u001b[43mload_image\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimage_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     45\u001b[0m img_array, mask \u001b[38;5;241m=\u001b[39m mark_watermark_area(img, x1, y1, x2, y2)\n\u001b[1;32m     47\u001b[0m result \u001b[38;5;241m=\u001b[39m remove_watermark(img_array, mask)\n",
-      "Cell \u001b[0;32mIn[1], line 9\u001b[0m, in \u001b[0;36mload_image\u001b[0;34m(image_path)\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mload_image\u001b[39m(image_path):\n\u001b[0;32m----> 9\u001b[0m     img \u001b[38;5;241m=\u001b[39m \u001b[43mImage\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mopen\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimage_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     11\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m img\n",
-      "File \u001b[0;32m~/miniconda3/lib/python3.12/site-packages/PIL/Image.py:3513\u001b[0m, in \u001b[0;36mopen\u001b[0;34m(fp, mode, formats)\u001b[0m\n\u001b[1;32m   3511\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_path(fp):\n\u001b[1;32m   3512\u001b[0m     filename \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mfspath(fp)\n\u001b[0;32m-> 3513\u001b[0m     fp \u001b[38;5;241m=\u001b[39m \u001b[43mbuiltins\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mopen\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfilename\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mrb\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m   3514\u001b[0m     exclusive_fp \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m   3515\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'path/to/your/image.jpg'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from PIL import Image\n",
     "\n",
@@ -54,10 +40,33 @@
     "    img_result = Image.fromarray(result.astype('uint8'))\n",
     "\n",
     "    img_result.save(output_path)\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "0cb4d52a-6d0d-45b1-809d-fa35bb3ac490",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "inpaint_biharmonic() got an unexpected keyword argument 'multichannel'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 13\u001b[0m\n\u001b[1;32m      9\u001b[0m img \u001b[38;5;241m=\u001b[39m load_image(image_path)\n\u001b[1;32m     11\u001b[0m img_array, mask \u001b[38;5;241m=\u001b[39m mark_watermark_area(img, x1, y1, x2, y2)\n\u001b[0;32m---> 13\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[43mremove_watermark\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimg_array\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmask\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     15\u001b[0m save_image(result, output_path)\n",
+      "Cell \u001b[0;32mIn[3], line 25\u001b[0m, in \u001b[0;36mremove_watermark\u001b[0;34m(img_array, mask)\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mremove_watermark\u001b[39m(img_array, mask):\n\u001b[0;32m---> 25\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[43minpaint\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minpaint_biharmonic\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimg_array\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmask\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmultichannel\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[1;32m     27\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m result\n",
+      "File \u001b[0;32m~/miniconda3/lib/python3.12/site-packages/skimage/_shared/utils.py:438\u001b[0m, in \u001b[0;36mchannel_as_last_axis.__call__.<locals>.fixed_func\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    435\u001b[0m channel_axis \u001b[38;5;241m=\u001b[39m kwargs\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mchannel_axis\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m)\n\u001b[1;32m    437\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m channel_axis \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m--> 438\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    440\u001b[0m \u001b[38;5;66;03m# TODO: convert scalars to a tuple in anticipation of eventually\u001b[39;00m\n\u001b[1;32m    441\u001b[0m \u001b[38;5;66;03m#       supporting a tuple of channel axes. Right now, only an\u001b[39;00m\n\u001b[1;32m    442\u001b[0m \u001b[38;5;66;03m#       integer or a single-element tuple is supported, though.\u001b[39;00m\n\u001b[1;32m    443\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m np\u001b[38;5;241m.\u001b[39misscalar(channel_axis):\n",
+      "\u001b[0;31mTypeError\u001b[0m: inpaint_biharmonic() got an unexpected keyword argument 'multichannel'"
+     ]
+    }
+   ],
+   "source": [
     "# 主程序\n",
     "\n",
-    "image_path = 'path/to/your/image.jpg'\n",
+    "image_path = '/Users/zouxd/Desktop/Screenshot 2025-11-14 at 13.26.11.png'\n",
     "\n",
     "output_path = 'path/to/output/image.jpg'\n",
     "\n",
@@ -75,10 +84,80 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0cb4d52a-6d0d-45b1-809d-fa35bb3ac490",
+   "id": "31fafdfb-4d75-46e7-b2c4-04cc24f92319",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "##代码test：生成斜纹半透明水印\n",
+    "from PIL import Image, ImageDraw, ImageFont\n",
+    "import math\n",
+    "\n",
+    "# ========= 参数区 =========\n",
+    "input_image_path = \"input.jpg\"        # 原图路径\n",
+    "output_image_path = \"watermarked.jpg\" # 输出路径\n",
+    "watermark_text = \"SAMPLE WATERMARK\"   # 水印文字\n",
+    "watermark_opacity = 0.15              # 水印不透明度 alpha，0~1，建议 0.1~0.3\n",
+    "font_size = 40                        # 字体大小\n",
+    "angle_deg = 30                        # 斜纹角度（度数）\n",
+    "tile_spacing = 200                    # 水印之间的间距（像素）\n",
+    "font_path = \"/System/Library/Fonts/Supplemental/Arial.ttf\"  # 换成你本机的字体路径\n",
+    "\n",
+    "# ========= 1. 打开原图，准备背景 B(x,y) =========\n",
+    "base = Image.open(input_image_path).convert(\"RGBA\")  # RGBA 方便做 alpha 混合\n",
+    "W, H = base.size\n",
+    "\n",
+    "# ========= 2. 创建一张“纯水印图层” =========\n",
+    "# 这张图相当于 W(x,y)，但先只是单色文字（白色），不含透明度\n",
+    "watermark_layer = Image.new(\"RGBA\", (W, H), (0, 0, 0, 0))\n",
+    "draw = ImageDraw.Draw(watermark_layer)\n",
+    "\n",
+    "try:\n",
+    "    font = ImageFont.truetype(font_path, font_size)\n",
+    "except IOError:\n",
+    "    # 如果字体路径不对，退回默认字体\n",
+    "    font = ImageFont.load_default()\n",
+    "\n",
+    "# ========= 3. 在一个更大的画布上排布重复水印，再旋转 =========\n",
+    "# 为了旋转后不截掉边缘，这里做一个对角线长度的正方形画布\n",
+    "diag = int(math.sqrt(W*W + H*H))  # 对角线长度\n",
+    "tile_layer = Image.new(\"RGBA\", (diag, diag), (0, 0, 0, 0))\n",
+    "tile_draw = ImageDraw.Draw(tile_layer)\n",
+    "\n",
+    "# 在 tile_layer 上做网格排布的水印文字（还不旋转）\n",
+    "for y in range(0, diag, tile_spacing):\n",
+    "    for x in range(0, diag, tile_spacing):\n",
+    "        tile_draw.text((x, y), watermark_text, font=font, fill=(255, 255, 255, 255))\n",
+    "\n",
+    "# 把这一大块水印图旋转一个角度，用 expand=True 保证完整\n",
+    "rotated = tile_layer.rotate(angle_deg, expand=True)\n",
+    "\n",
+    "# ========= 4. 把旋转后的水印图裁剪回原图大小 =========\n",
+    "# 我们从旋转图的中心往外裁一个 W x H 的区域\n",
+    "rw, rh = rotated.size\n",
+    "left = (rw - W) // 2\n",
+    "top = (rh - H) // 2\n",
+    "cropped_watermark = rotated.crop((left, top, left + W, top + H))\n",
+    "\n",
+    "# ========= 5. 控制整体透明度（构造 alpha(x,y)） =========\n",
+    "# 这里我们简单地对所有非透明像素统一乘以 watermark_opacity\n",
+    "# 这一步相当于给 W(x,y) 乘上一个全局 alpha\n",
+    "alpha_scaled = cropped_watermark.split()[3].point(\n",
+    "    lambda a: int(a * watermark_opacity)\n",
+    ")\n",
+    "watermark_with_alpha = cropped_watermark.copy()\n",
+    "watermark_with_alpha.putalpha(alpha_scaled)\n",
+    "\n",
+    "# ========= 6. 把水印层叠加到原图上，得到 I_obs(x,y) =========\n",
+    "# PIL 的 alpha_composite 做的就是：\n",
+    "# I_obs = alpha * W + (1 - alpha) * B\n",
+    "composited = Image.alpha_composite(base, watermark_with_alpha)\n",
+    "\n",
+    "# 如果你想保存成 JPG，可以去掉 alpha 通道\n",
+    "composited_rgb = composited.convert(\"RGB\")\n",
+    "composited_rgb.save(output_image_path, quality=95)\n",
+    "\n",
+    "print(\"Done! Saved to:\", output_image_path)\n"
+   ]
   }
  ],
  "metadata": {
