--- a/ImageProcessingTests.ipynb
+++ b/ImageProcessingTests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "c049397c-f100-4356-a032-2e52140c55f8",
    "metadata": {},
    "outputs": [],
@@ -45,39 +45,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "0cb4d52a-6d0d-45b1-809d-fa35bb3ac490",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "inpaint_biharmonic() got an unexpected keyword argument 'multichannel'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 13\u001b[0m\n\u001b[1;32m      9\u001b[0m img \u001b[38;5;241m=\u001b[39m load_image(image_path)\n\u001b[1;32m     11\u001b[0m img_array, mask \u001b[38;5;241m=\u001b[39m mark_watermark_area(img, x1, y1, x2, y2)\n\u001b[0;32m---> 13\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[43mremove_watermark\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimg_array\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmask\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     15\u001b[0m save_image(result, output_path)\n",
-      "Cell \u001b[0;32mIn[3], line 25\u001b[0m, in \u001b[0;36mremove_watermark\u001b[0;34m(img_array, mask)\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mremove_watermark\u001b[39m(img_array, mask):\n\u001b[0;32m---> 25\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[43minpaint\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minpaint_biharmonic\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimg_array\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmask\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmultichannel\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[1;32m     27\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m result\n",
-      "File \u001b[0;32m~/miniconda3/lib/python3.12/site-packages/skimage/_shared/utils.py:438\u001b[0m, in \u001b[0;36mchannel_as_last_axis.__call__.<locals>.fixed_func\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    435\u001b[0m channel_axis \u001b[38;5;241m=\u001b[39m kwargs\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mchannel_axis\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m)\n\u001b[1;32m    437\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m channel_axis \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m--> 438\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    440\u001b[0m \u001b[38;5;66;03m# TODO: convert scalars to a tuple in anticipation of eventually\u001b[39;00m\n\u001b[1;32m    441\u001b[0m \u001b[38;5;66;03m#       supporting a tuple of channel axes. Right now, only an\u001b[39;00m\n\u001b[1;32m    442\u001b[0m \u001b[38;5;66;03m#       integer or a single-element tuple is supported, though.\u001b[39;00m\n\u001b[1;32m    443\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m np\u001b[38;5;241m.\u001b[39misscalar(channel_axis):\n",
-      "\u001b[0;31mTypeError\u001b[0m: inpaint_biharmonic() got an unexpected keyword argument 'multichannel'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 主程序\n",
     "\n",
-    "image_path = '/Users/zouxd/Desktop/Screenshot 2025-11-14 at 13.26.11.png'\n",
-    "\n",
-    "output_path = 'path/to/output/image.jpg'\n",
-    "\n",
+    "image_path = ''\n",
+    "output_path = ''\n",
     "x1, y1, x2, y2 = 100, 100, 200, 200\n",
-    "\n",
     "img = load_image(image_path)\n",
-    "\n",
     "img_array, mask = mark_watermark_area(img, x1, y1, x2, y2)\n",
-    "\n",
     "result = remove_watermark(img_array, mask)\n",
-    "\n",
     "save_image(result, output_path)"
    ]
   },
@@ -158,6 +138,296 @@
     "\n",
     "print(\"Done! Saved to:\", output_image_path)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "395119c4-8859-44be-a7f6-2e608652e6bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from skimage import io, img_as_float\n",
+    "from skimage.restoration import inpaint\n",
+    "\n",
+    "# ============ 1. 读取图片 ============\n",
+    "# 换成你自己的图片路径，例如 \"example.jpg\"\n",
+    "image_path = \"example.jpg\"\n",
+    "\n",
+    "# skimage.io.imread 默认是 H x W x C\n",
+    "image = img_as_float(io.imread(image_path))  # 转成 float [0,1]\n",
+    "print(\"Image shape:\", image.shape)\n",
+    "\n",
+    "# ============ 2. 构造遮挡区域（mask） ============\n",
+    "# mask 为 True 的地方表示“需要修复的区域”\n",
+    "mask = np.zeros(image.shape[:2], dtype=bool)\n",
+    "\n",
+    "H, W = mask.shape\n",
+    "\n",
+    "# 这里我们简单地在中间画一个矩形遮挡\n",
+    "h_frac = 0.4   # 遮挡高度占比\n",
+    "w_frac = 0.4   # 遮挡宽度占比\n",
+    "\n",
+    "h_box = int(H * h_frac)\n",
+    "w_box = int(W * w_frac)\n",
+    "\n",
+    "top = H // 2 - h_box // 2\n",
+    "left = W // 2 - w_box // 2\n",
+    "\n",
+    "mask[top:top + h_box, left:left + w_box] = True\n",
+    "\n",
+    "# 为了直观展示“被遮挡”的效果，我们把这块画成纯色（比如黑色）\n",
+    "occluded_image = image.copy()\n",
+    "occluded_image[mask] = 0.0   # 全黑；也可以改成别的颜色\n",
+    "\n",
+    "# ============ 3. 调用 inpaint_biharmonic 做图像修复 ============\n",
+    "# 注意：新版 skimage 用 channel_axis，而不是 multichannel\n",
+    "# channel_axis=-1 表示颜色通道在最后一个维度 (H, W, C)\n",
+    "inpainted_image = inpaint.inpaint_biharmonic(\n",
+    "    occluded_image,\n",
+    "    mask,\n",
+    "    channel_axis=-1\n",
+    ")\n",
+    "\n",
+    "# ============ 4. 可视化结果 ============\n",
+    "fig, axes = plt.subplots(1, 3, figsize=(12, 4))\n",
+    "ax = axes.ravel()\n",
+    "\n",
+    "ax[0].imshow(image)\n",
+    "ax[0].set_title(\"Original\")\n",
+    "ax[0].axis(\"off\")\n",
+    "\n",
+    "ax[1].imshow(occluded_image)\n",
+    "ax[1].set_title(\"With Occlusion\")\n",
+    "ax[1].axis(\"off\")\n",
+    "\n",
+    "ax[2].imshow(inpainted_image)\n",
+    "ax[2].set_title(\"Inpainted\")\n",
+    "ax[2].axis(\"off\")\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45e4ebd4-560a-42fa-bc6f-ca7698beb529",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from skimage import io, img_as_float\n",
+    "\n",
+    "def fft_spectrum(channel):\n",
+    "    \"\"\"\n",
+    "    对单个灰度通道做 2D FFT，并返回：\n",
+    "    - 原始 FFT f\n",
+    "    - 经过 fftshift 移到中心的频谱 fshift\n",
+    "    - 对数幅度谱 mag (便于显示)\n",
+    "    \"\"\"\n",
+    "    f = np.fft.fft2(channel)\n",
+    "    fshift = np.fft.fftshift(f)\n",
+    "    mag = np.log(np.abs(fshift) + 1e-8)\n",
+    "    return f, fshift, mag\n",
+    "\n",
+    "# ===== 1. 读取 PNG 彩色图像 =====\n",
+    "img = io.imread(\"input.png\")   # 换成你的 PNG 路径\n",
+    "img = img_as_float(img)\n",
+    "\n",
+    "print(\"Original image shape:\", img.shape)\n",
+    "\n",
+    "# 如果有 alpha 通道（RGBA），丢掉 alpha，只保留 RGB\n",
+    "if img.ndim == 3 and img.shape[2] == 4:\n",
+    "    img_rgb = img[:, :, :3]\n",
+    "elif img.ndim == 3 and img.shape[2] == 3:\n",
+    "    img_rgb = img\n",
+    "else:\n",
+    "    raise ValueError(\"图像不是标准的 RGB/RGBA 彩色图，当前 shape = {}\".format(img.shape))\n",
+    "\n",
+    "R = img_rgb[:, :, 0]\n",
+    "G = img_rgb[:, :, 1]\n",
+    "B = img_rgb[:, :, 2]\n",
+    "\n",
+    "# ===== 2. 对 R/G/B 三个通道分别做 FFT =====\n",
+    "f_R, fshift_R, mag_R = fft_spectrum(R)\n",
+    "f_G, fshift_G, mag_G = fft_spectrum(G)\n",
+    "f_B, fshift_B, mag_B = fft_spectrum(B)\n",
+    "\n",
+    "# ===== 3. 做一些简单的一致性“度量” =====\n",
+    "# 例如：三通道幅度谱的平均值，以及两两差分\n",
+    "mag_mean = (mag_R + mag_G + mag_B) / 3.0\n",
+    "diff_RG = np.abs(mag_R - mag_G)\n",
+    "diff_RB = np.abs(mag_R - mag_B)\n",
+    "diff_GB = np.abs(mag_G - mag_B)\n",
+    "\n",
+    "# 也可以粗暴一点，看“三通道都很像”的地方：\n",
+    "# 比如：max diff < 某个小阈值，标记为“高一致性区域”------------------------------------------------!\n",
+    "max_diff = np.maximum.reduce([diff_RG, diff_RB, diff_GB])\n",
+    "consistency_mask = max_diff < 0.05  # 阈值可调，这里只是示意用\n",
+    "\n",
+    "# ===== 4. 可视化：原图 + R/G/B 通道 + 频谱 + 一致性掩膜 =====\n",
+    "fig, axes = plt.subplots(3, 4, figsize=(14, 10))\n",
+    "ax = axes.ravel()\n",
+    "\n",
+    "# 原图\n",
+    "ax[0].imshow(img_rgb)\n",
+    "ax[0].set_title(\"Original RGB\")\n",
+    "ax[0].axis(\"off\")\n",
+    "\n",
+    "# R/G/B 通道（空间域）\n",
+    "ax[1].imshow(R, cmap=\"gray\")\n",
+    "ax[1].set_title(\"R channel (spatial)\")\n",
+    "ax[1].axis(\"off\")\n",
+    "\n",
+    "ax[2].imshow(G, cmap=\"gray\")\n",
+    "ax[2].set_title(\"G channel (spatial)\")\n",
+    "ax[2].axis(\"off\")\n",
+    "\n",
+    "ax[3].imshow(B, cmap=\"gray\")\n",
+    "ax[3].set_title(\"B channel (spatial)\")\n",
+    "ax[3].axis(\"off\")\n",
+    "\n",
+    "# R/G/B 频谱（对数幅度）\n",
+    "ax[4].imshow(mag_R, cmap=\"gray\")\n",
+    "ax[4].set_title(\"R channel spectrum\")\n",
+    "ax[4].axis(\"off\")\n",
+    "\n",
+    "ax[5].imshow(mag_G, cmap=\"gray\")\n",
+    "ax[5].set_title(\"G channel spectrum\")\n",
+    "ax[5].axis(\"off\")\n",
+    "\n",
+    "ax[6].imshow(mag_B, cmap=\"gray\")\n",
+    "ax[6].set_title(\"B channel spectrum\")\n",
+    "ax[6].axis(\"off\")\n",
+    "\n",
+    "# 三通道平均频谱\n",
+    "ax[7].imshow(mag_mean, cmap=\"gray\")\n",
+    "ax[7].set_title(\"Mean spectrum (R+G+B)/3\")\n",
+    "ax[7].axis(\"off\")\n",
+    "\n",
+    "# 两两差分（频谱差异）\n",
+    "ax[8].imshow(diff_RG, cmap=\"magma\")\n",
+    "ax[8].set_title(\"|R - G| spectrum diff\")\n",
+    "ax[8].axis(\"off\")\n",
+    "\n",
+    "ax[9].imshow(diff_RB, cmap=\"magma\")\n",
+    "ax[9].set_title(\"|R - B| spectrum diff\")\n",
+    "ax[9].axis(\"off\")\n",
+    "\n",
+    "ax[10].imshow(diff_GB, cmap=\"magma\")\n",
+    "ax[10].set_title(\"|G - B| spectrum diff\")\n",
+    "ax[10].axis(\"off\")\n",
+    "\n",
+    "# “一致性掩膜”可视化（这里只是示意）\n",
+    "ax[11].imshow(consistency_mask, cmap=\"gray\")\n",
+    "ax[11].set_title(\"High-consistency mask\\n(3 channels similar)\")\n",
+    "ax[11].axis(\"off\")\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6eedf047-4e0d-4988-ab4b-b58ab7453838",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def reconstruct_rgb_from_spectra(fshift_R, fshift_G, fshift_B, normalize=True):\n",
+    "    # R 通道\n",
+    "    f_R = np.fft.ifftshift(fshift_R)\n",
+    "    img_R_complex = np.fft.ifft2(f_R)\n",
+    "    img_R = np.real(img_R_complex)\n",
+    "\n",
+    "    # G 通道\n",
+    "    f_G = np.fft.ifftshift(fshift_G)\n",
+    "    img_G_complex = np.fft.ifft2(f_G)\n",
+    "    img_G = np.real(img_G_complex)\n",
+    "\n",
+    "    # B 通道\n",
+    "    f_B = np.fft.ifftshift(fshift_B)\n",
+    "    img_B_complex = np.fft.ifft2(f_B)\n",
+    "    img_B = np.real(img_B_complex)\n",
+    "\n",
+    "    img_rgb = np.stack([img_R, img_G, img_B], axis=-1)\n",
+    "\n",
+    "    if normalize:\n",
+    "        img_min = img_rgb.min()\n",
+    "        img_max = img_rgb.max()\n",
+    "        if img_max > img_min:\n",
+    "            img_rgb = (img_rgb - img_min) / (img_max - img_min)\n",
+    "\n",
+    "    return img_rgb\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6372945b-94f0-4093-9b7b-4bf933185c3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask = consistency_mask\n",
+    "fs_R = fshift_R * mask\n",
+    "fs_G = fshift_G * mask\n",
+    "fs_B = fshift_B * mask\n",
+    "\n",
+    "img = reconstruct_rgb_from_spectra(fs_R, fs_G, fs_B, normalize=True)\n",
+    "\n",
+    "fig, axes = plt.subplots(1, 2, figsize=(14, 10))\n",
+    "ax = axes.ravel()\n",
+    "\n",
+    "# 原图\n",
+    "ax[0].imshow(img_rgb)\n",
+    "ax[0].set_title(\"Original RGB\")\n",
+    "ax[0].axis(\"off\")\n",
+    "\n",
+    "# R/G/B 通道（filtered）\n",
+    "ax[1].imshow(img)\n",
+    "ax[1].set_title(\"Filtered\")\n",
+    "ax[1].axis(\"off\")\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f5dddac-e949-4cef-88d1-676aca1bacd6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed7750d1-8a08-4160-bd3c-4c9e811db3be",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "122d634b-c6dd-49fe-aac7-1abcdde7c868",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d067f9b-c950-47c4-bb21-4162c7016ad1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
