--- a/ImageProcessingTests.ipynb
+++ b/ImageProcessingTests.ipynb
@@ -399,19 +399,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "2f5dddac-e949-4cef-88d1-676aca1bacd6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "import sys\n",
+    "sys.path.append(\"\") "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "id": "ed7750d1-8a08-4160-bd3c-4c9e811db3be",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import torch\n",
+    "from torchvision import transforms\n",
+    "from PIL import Image\n",
+    "from watermark_remover import WatermarkRemover\n",
+    "import numpy as np\n",
+    "\n",
+    "image_path = \"input256.png\"  # Replace with the path to your test image\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "# Load the trained model\n",
+    "model = WatermarkRemover().to(device)\n",
+    "model_path = \"/Users/zouxd/Documents/--Tools--/-img/Watermark_Removal/model.pth\"  # Replace with the path to your saved model\n",
+    "model.load_state_dict(torch.load(model_path, map_location=device))\n",
+    "model.eval()\n",
+    "\n",
+    "transform = transforms.Compose([transforms.Resize((256, 256)),\n",
+    "                                transforms.ToTensor(),])\n",
+    "watermarked_image = Image.open(image_path).convert(\"RGB\")\n",
+    "original_size = watermarked_image.size  \n",
+    "input_tensor = transform(watermarked_image).unsqueeze(0).to(device)\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    output_tensor = model(input_tensor)\n",
+    "\n",
+    "predicted_image = output_tensor.squeeze(0).cpu().permute(1, 2, 0).clamp(0, 1).numpy()\n",
+    "predicted_pil = Image.fromarray((predicted_image * 255).astype(np.uint8))\n",
+    "predicted_pil = predicted_pil.resize(original_size, Image.Resampling.LANCZOS)\n",
+    "predicted_pil.save(\"/Users/zouxd/Documents/--Tools--/predicted_image.jpg\", quality=100)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
