--- a/ImageProcessingTests.ipynb
+++ b/ImageProcessingTests.ipynb
@@ -427,7 +427,7 @@
     "\n",
     "# Load the trained model\n",
     "model = WatermarkRemover().to(device)\n",
-    "model_path = \"/Users/zouxd/Documents/--Tools--/-img/Watermark_Removal/model.pth\"  # Replace with the path to your saved model\n",
+    "model_path = \"Watermark_Removal/model.pth\"  # Replace with the path to your saved model\n",
     "model.load_state_dict(torch.load(model_path, map_location=device))\n",
     "model.eval()\n",
     "\n",
@@ -443,7 +443,7 @@
     "predicted_image = output_tensor.squeeze(0).cpu().permute(1, 2, 0).clamp(0, 1).numpy()\n",
     "predicted_pil = Image.fromarray((predicted_image * 255).astype(np.uint8))\n",
     "predicted_pil = predicted_pil.resize(original_size, Image.Resampling.LANCZOS)\n",
-    "predicted_pil.save(\"/Users/zouxd/Documents/--Tools--/predicted_image.jpg\", quality=100)\n",
+    "predicted_pil.save(\"predicted_image.jpg\", quality=100)\n",
     "\n"
    ]
   },
