--- a/What4Dinner.ipynb
+++ b/What4Dinner.ipynb
@@ -1,33 +1,203 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "95b57ce1-0662-431a-9bc9-9a78e6ef9d8c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# What4Dinner: Quick Meal Idea Generator\n",
+        "\n",
+        "Use this notebook to quickly brainstorm dinner ideas by cuisine, protein, dietary preference, and cook time. Adjust the filters to get a short list of options, or let the randomizer pick for you.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "import random\n",
+        "from textwrap import dedent\n",
+        "\n",
+        "random.seed(42)\n"
+      ],
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "MEALS = [\n",
+        "    {\n",
+        "        'name': 'Lemon Herb Roast Chicken',\n",
+        "        'cuisine': 'Mediterranean',\n",
+        "        'protein': 'chicken',\n",
+        "        'diet': 'standard',\n",
+        "        'cook_time': 60,\n",
+        "        'servings': 4,\n",
+        "        'notes': 'Serve with roasted potatoes and a simple salad.'\n",
+        "    },\n",
+        "    {\n",
+        "        'name': 'Tofu Stir-Fry with Ginger Soy Glaze',\n",
+        "        'cuisine': 'Asian',\n",
+        "        'protein': 'tofu',\n",
+        "        'diet': 'vegetarian',\n",
+        "        'cook_time': 25,\n",
+        "        'servings': 2,\n",
+        "        'notes': 'Use any crunchy veggies on hand\u2014bell peppers, carrots, broccoli.'\n",
+        "    },\n",
+        "    {\n",
+        "        'name': 'Chickpea and Spinach Curry',\n",
+        "        'cuisine': 'Indian',\n",
+        "        'protein': 'chickpea',\n",
+        "        'diet': 'vegan',\n",
+        "        'cook_time': 35,\n",
+        "        'servings': 4,\n",
+        "        'notes': 'Finish with coconut milk; great with rice or naan.'\n",
+        "    },\n",
+        "    {\n",
+        "        'name': 'Shrimp Tacos with Cilantro Lime Slaw',\n",
+        "        'cuisine': 'Mexican',\n",
+        "        'protein': 'shrimp',\n",
+        "        'diet': 'pescatarian',\n",
+        "        'cook_time': 30,\n",
+        "        'servings': 3,\n",
+        "        'notes': 'Quick sear the shrimp and warm tortillas just before serving.'\n",
+        "    },\n",
+        "    {\n",
+        "        'name': 'Garlic Butter Salmon and Green Beans',\n",
+        "        'cuisine': 'American',\n",
+        "        'protein': 'salmon',\n",
+        "        'diet': 'pescatarian',\n",
+        "        'cook_time': 22,\n",
+        "        'servings': 2,\n",
+        "        'notes': 'Sheet-pan friendly; broil for the last 2 minutes for color.'\n",
+        "    },\n",
+        "    {\n",
+        "        'name': 'Beef Bulgogi Rice Bowls',\n",
+        "        'cuisine': 'Korean',\n",
+        "        'protein': 'beef',\n",
+        "        'diet': 'standard',\n",
+        "        'cook_time': 30,\n",
+        "        'servings': 4,\n",
+        "        'notes': 'Thinly slice the beef and marinate for at least 15 minutes.'\n",
+        "    },\n",
+        "    {\n",
+        "        'name': 'Mushroom Risotto',\n",
+        "        'cuisine': 'Italian',\n",
+        "        'protein': 'mushroom',\n",
+        "        'diet': 'vegetarian',\n",
+        "        'cook_time': 40,\n",
+        "        'servings': 4,\n",
+        "        'notes': 'Use warmed stock and finish with parmesan and lemon zest.'\n",
+        "    },\n",
+        "    {\n",
+        "        'name': 'Turkey Lettuce Wraps',\n",
+        "        'cuisine': 'Asian',\n",
+        "        'protein': 'turkey',\n",
+        "        'diet': 'standard',\n",
+        "        'cook_time': 20,\n",
+        "        'servings': 3,\n",
+        "        'notes': 'Add water chestnuts for crunch and hoisin for sweetness.'\n",
+        "    },\n",
+        "    {\n",
+        "        'name': 'Black Bean Sweet Potato Bowls',\n",
+        "        'cuisine': 'Mexican',\n",
+        "        'protein': 'black bean',\n",
+        "        'diet': 'vegan',\n",
+        "        'cook_time': 35,\n",
+        "        'servings': 4,\n",
+        "        'notes': 'Roast sweet potatoes with smoked paprika; top with avocado.'\n",
+        "    },\n",
+        "    {\n",
+        "        'name': 'Seared Tuna Nicoise Salad',\n",
+        "        'cuisine': 'Mediterranean',\n",
+        "        'protein': 'tuna',\n",
+        "        'diet': 'pescatarian',\n",
+        "        'cook_time': 25,\n",
+        "        'servings': 2,\n",
+        "        'notes': 'Keep eggs jammy and blanch green beans for 3 minutes.'\n",
+        "    },\n",
+        "]\n"
+      ],
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "def suggest_meals(cuisine=None, protein=None, diet=None, max_cook_time=None, servings=None, *, limit=5):\n",
+        "    \"Return matching meal ideas sorted by cook time.\"\n",
+        "    meals = MEALS\n",
+        "    if cuisine:\n",
+        "        meals = [m for m in meals if m['cuisine'].lower() == cuisine.lower()]\n",
+        "    if protein:\n",
+        "        meals = [m for m in meals if m['protein'].lower() == protein.lower()]\n",
+        "    if diet:\n",
+        "        meals = [m for m in meals if m['diet'].lower() == diet.lower()]\n",
+        "    if max_cook_time:\n",
+        "        meals = [m for m in meals if m['cook_time'] <= max_cook_time]\n",
+        "    if servings:\n",
+        "        meals = [m for m in meals if m['servings'] >= servings]\n",
+        "\n",
+        "    meals = sorted(meals, key=lambda m: m['cook_time'])\n",
+        "    return meals[:limit]\n"
+      ],
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "def format_meals(meals):\n",
+        "    if not meals:\n",
+        "        return 'No matches\u2014try relaxing a filter.'\n",
+        "\n",
+        "    lines = []\n",
+        "    for m in meals:\n",
+        "        lines.append(dedent(f\"\"\"\n",
+        "        - {m['name']} ({m['cuisine']}, {m['protein']}, {m['diet']})\n",
+        "          time: {m['cook_time']} min | serves {m['servings']}\n",
+        "          note: {m['notes']}\n",
+        "        \"\"\").strip())\n",
+        "    return \"\\n\".join(lines)\n"
+      ],
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "# Example: quick pescatarian meals in ~30 minutes\n",
+        "top_matches = suggest_meals(diet='pescatarian', max_cook_time=30)\n",
+        "print(format_meals(top_matches))\n"
+      ],
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "# Pick a random idea for tonight\n",
+        "print(format_meals([random.choice(MEALS)]))\n"
+      ],
+      "execution_count": 6,
+      "outputs": []
+    }
+  ],
+  "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.10"
+    }
   },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.2"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
+  "nbformat": 4,
+  "nbformat_minor": 5
 }
